# BBDecoder

./: .gitignore  LICENSE  Model_architecture  README.md  custom_testing.py  model.gv  model_visualization_with_index  my_network_graph  my_network_graph.png.xmp  pyproject.toml  testing.py  tt.py
BBDecoder/: __init__.py  main.py
BBDecoder/analysis/: __init__.py  grad.py  grad_stats.py  layer_stats.py
BBDecoder/archives/: __init__.py  comp_archive.py  flow_archive.py  grad_archive.py
BBDecoder/bias_calculator/: bias_scorer.py
BBDecoder/utilities/: __init__.py  load_model.py  similarity.py
BBDecoder/view/torchview/: computation_graph.py  torchview.py  utils.py
BBDecoder/view/torchview/computation_node/: base_node.py  compute_node.py
BBDecoder/visualizer/: __init__.py  custom_recorder.py  vis_main.py
BBDecoder/wrappers/: __init__.py  wrapper.py
O:\PCodes\black_box\/: Model_architecture
analysis/: grad.py  layer_stats.py
save_folder/: tracked_grads.csv
view/torchview/: computation_graph.py  recorder_tensor.py  torchview.py
view/torchview/computation_node/: base_node.py  compute_node.py
visualizer/: __init__.py  vis_main.py
wrappers/: wrapper.py
